--- a/.gitignore
+++ b/.gitignore
@@ -28,8 +28,10 @@ Desktop.ini
 .terraform/providers/registry.terraform.io/hashicorp/google/5.38.0/windows_amd64/LICENSE.txt
 
 # Terraform state files
-terraform.tfstate
-terraform.tfstate.backup
+*.tfstate
+*.tfstate.backup
 
 # Terraform .terraform directory
 .terraform/
+
+*.tfvars
