--- a/.gitignore
+++ b/.gitignore
@@ -25,7 +25,7 @@ Thumbs.db
 Desktop.ini
 
 # Ignore the specific LICENSE.txt file
-.terraform/providers/registry.terraform.io/hashicorp/google/5.38.0/windows_amd64/LICENSE.txt
+*terraform/providers/registry.terraform.io/hashicorp/google/5.38.0/windows_amd64/LICENSE.txt
 
 # Terraform state files
 *.tfstate
@@ -35,3 +35,4 @@ Desktop.ini
 .terraform/
 
 *.tfvars
+*terragrunt.hcl
