--- a/nginx.conf
+++ b/nginx.conf
@@ -1,5 +1,5 @@
 user  nginx;
-worker_processes  1;
+worker_processes  auto;  # Let Nginx decide the optimal number of processes
 
 events {
     worker_connections  1024;
@@ -10,17 +10,16 @@ http {
     default_type  application/octet-stream;
 
     sendfile        on;
-    tcp_nopush      on;
-    tcp_nodelay     on;
     keepalive_timeout  65;
 
     server {
-        listen       80;
+        listen       8080;
         server_name  localhost;
 
         location / {
             root   /usr/share/nginx/html;
-            index  index.html;
+            index  index.html index.htm;  # Add index.htm as an alternative
         }
     }
 }
+
