--- a/.github/workflows/generate_and_deploy.yaml
+++ b/.github/workflows/generate_and_deploy.yaml
@@ -11,13 +11,20 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
+      - name: Install terraform-docs
+        run: |
+          curl -sSLo terraform-docs.tar.gz https://github.com/terraform-docs/terraform-docs/releases/download/v0.16.0/terraform-docs-v0.16.0-linux-amd64.tar.gz
+          tar -xzf terraform-docs.tar.gz
+          sudo mv terraform-docs /usr/local/bin/
+          terraform-docs version
+
       - name: Set up Python
         uses: actions/setup-python@v3
         with:
           python-version: 3.8  # Replace with your desired Python version
 
       - name: Install dependencies
-        run: pip install terraform-docs mkdocs
+        run: pip install mkdocs
 
       - name: Generate documentation
         run: |
@@ -37,4 +44,5 @@ jobs:
           pip install google-cloud-sdk
           gcloud auth activate-service-account --key-file=${{ secrets.GCP_SA_KEY }}
           gcloud run deploy --image gcr.io/$PROJECT_ID/terraform-docs:latest --platform managed
+
 
