--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,7 +1,4 @@
-site_name: Terraform Documentation
+site_name: My Terraform Documentation
 nav:
   - Home: index.md
-  - Getting Started: getting-started.md
-  - Modules: modules.md
-theme:
-  name: mkdocs
+
