--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,4 +1,6 @@
-site_name: My Terraform Documentation
+site_name: My Documentation Site
+docs_dir: docs
+site_dir: site
+
 nav:
   - Home: index.md
-
