--- a/.github/workflows/generate_and_deploy.yaml
+++ b/.github/workflows/generate_and_deploy.yaml
@@ -37,20 +37,17 @@ jobs:
              source $HOME/google-cloud-sdk/path.bash.inc
              
       - name: Authenticate to GCP
-        uses: google-github-actions/auth@v0
+        uses: google-github-actions/auth@v1
         with:
                credentials_json: ${{ secrets.GCP_SA_KEY }}
    
       - name: Build and push Docker image
         run: |
-             docker build -t gcr.io/$PROJECT_ID/terraform-docs:latest .
-             docker push gcr.io/$PROJECT_ID/terraform-docs:latest
-
-      # Optional: Deploy to Cloud Run
+                 docker build -t gcr.io/${{ secrets.GCP_PROJECT_ID }}/terraform-docs:latest .
+                 docker push gcr.io/${{ secrets.GCP_PROJECT_ID }}/terraform-docs:latest
+       
       - name: Deploy to Cloud Run
         run: |
-          pip install google-cloud-sdk
-          gcloud auth activate-service-account --key-file=${{ secrets.GCP_SA_KEY }}
-          gcloud run deploy --image gcr.io/$PROJECT_ID/terraform-docs:latest --platform managed
+                 gcloud run deploy --image gcr.io/${{ secrets.GCP_PROJECT_ID }}/terraform-docs:latest --platform managed
 
 
