--- a/.github/workflows/generate_and_deploy.yaml
+++ b/.github/workflows/generate_and_deploy.yaml
@@ -40,6 +40,10 @@ jobs:
         uses: google-github-actions/auth@v1
         with:
                credentials_json: ${{ secrets.GCP_SA_KEY }}
+      
+      - name: Configure Docker to use gcloud as a credential helper
+        run: gcloud auth configure-docker
+                      
    
       - name: Build and push Docker image
         run: |
