--- a/.github/workflows/generate_and_deploy.yaml
+++ b/.github/workflows/generate_and_deploy.yaml
@@ -52,6 +52,7 @@ jobs:
        
       - name: Deploy to Cloud Run
         run: |
-                 gcloud run deploy --image gcr.io/${{ secrets.GCP_PROJECT_ID }}/terraform-docs:latest --platform managed
+                gcloud auth activate-service-account --key-file=${{ secrets.GCP_SA_KEY }}
+                gcloud run deploy --image gcr.io/${{ secrets.GCP_PROJECT_ID }}/terraform-docs:latest --platform managed
 
 
