--- a/.github/workflows/generate_and_deploy.yaml
+++ b/.github/workflows/generate_and_deploy.yaml
@@ -49,6 +49,12 @@ jobs:
         run: |
                  docker build -t gcr.io/${{ secrets.GCP_PROJECT_ID }}/terraform-docs:latest .
                  docker push gcr.io/${{ secrets.GCP_PROJECT_ID }}/terraform-docs:latest
+      
+      - name: Set up Google Cloud authentication
+        run: |
+                   echo "${{ secrets.GCP_SA_KEY }}" > /tmp/gcp-key.json
+                   gcloud auth activate-service-account --key-file=/tmp/gcp-key.json
+                          
        
       - name: Deploy to Cloud Run
         run: |
