--- a/.github/workflows/generate_and_deploy.yaml
+++ b/.github/workflows/generate_and_deploy.yaml
@@ -36,10 +36,10 @@ jobs:
              curl https://sdk.cloud.google.com | bash
              source $HOME/google-cloud-sdk/path.bash.inc
              
-      - name: Authenticate to GCP
-        uses: google-github-actions/auth@v1
-        with:
-               credentials_json: ${{ secrets.GCP_SA_KEY }}
+      - name: Set up Google Cloud authentication
+        run: |
+               echo "${{ secrets.GCP_SA_KEY }}" > /tmp/gcp-key.json
+               gcloud auth activate-service-account --key-file=/tmp/gcp-key.json
       
       - name: Configure Docker to use gcloud as a credential helper
         run: gcloud auth configure-docker
