--- a/.github/workflows/generate_and_deploy.yaml
+++ b/.github/workflows/generate_and_deploy.yaml
@@ -36,10 +36,10 @@ jobs:
              curl https://sdk.cloud.google.com | bash
              source $HOME/google-cloud-sdk/path.bash.inc
              
-      - name: Set up Google Cloud authentication
-        run: |
-               echo "${{ secrets.GCP_SA_KEY }}" > /tmp/gcp-key.json
-               gcloud auth activate-service-account --key-file=/tmp/gcp-key.json
+      - name: Authenticate to GCP
+        uses: google-github-actions/auth@v1
+        with:
+               credentials_json: ${{ secrets.GCP_SA_KEY }}
       
       - name: Configure Docker to use gcloud as a credential helper
         run: gcloud auth configure-docker
@@ -52,5 +52,8 @@ jobs:
     
       - name: Deploy to Cloud Run
         run: |
-                gcloud auth activate-service-account --key-file=${{ secrets.GCP_SA_KEY }}
-                gcloud run deploy --image gcr.io/${{ secrets.GCP_PROJECT_ID }}/terraform-docs:latest --platform managed
+               gcloud run deploy terraform-docs \
+               --image gcr.io/$GCP_PROJECT_ID/terraform-docs:$GITHUB_SHA \
+               --region us-central1 \
+               --platform managed \
+               --allow-unauthenticated
