--- a/.github/workflows/generate_and_deploy.yaml
+++ b/.github/workflows/generate_and_deploy.yaml
@@ -21,7 +21,7 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v3
         with:
-          python-version: 3.8  # Replace with your desired Python version
+          python-version: 3.8  
 
       - name: Install dependencies
         run: pip install mkdocs
