--- a/.github/workflows/generate_and_deploy.yaml
+++ b/.github/workflows/generate_and_deploy.yaml
@@ -53,7 +53,7 @@ jobs:
       - name: Deploy to Cloud Run
         run: |
                gcloud run deploy terraform-docs \
-               --image gcr.io/$GCP_PROJECT_ID/terraform-docs:af8f1e934d83 \
+               --image gcr.io/${{ secrets.GCP_PROJECT_ID }}/terraform-docs:latest \
                --region us-central1 \
                --platform managed \
                --allow-unauthenticated
