Update files [skip ci]

--- a/.github/workflows/generate_and_deploy.yml
+++ b/.github/workflows/generate_and_deploy.yml
@@ -62,8 +62,11 @@ name: Generate and Deploy Terraform Docs
 
 on:
   push:
-    branches: [main]
-
+    branches:
+          - main
+    paths-ignore:
+          - '**/skip-ci/**'
+    
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
